[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "configurator"
dependencies = [
    "watchdog==6.0.0",
    "json-helpers @ git+https://git.int.rnd-42.ru/ffatkullin/python-templates.git@json-helpers-v0.2.0#subdirectory=json-helpers",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "configurator.__version__"}
