[project]
name = "configurator"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "json-helpers",
    "pygraphviz~=1.14",
    "watchdog>=6.0.0,<7.0.0",
]


[dependency-groups]
dev = [
    "black==25.12.0",
    "isort==7.0.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]


[tool.isort]
profile = "black"
extend_skip_glob = []
skip_gitignore = true
line_length = 120
atomic = true
lines_after_imports = 2
combine_as_imports = true
force_sort_within_sections = true
color_output = true


[tool.black]
line-length = 120
extend-exclude = '''
(
  .venv
)
'''


[tool.ruff.lint]
ignore = ["F541"]


[tool.setuptools.dynamic]
version = {attr = "configurator.__version__"}


[tool.uv.sources]
json-helpers = { git = "https://git.int.rnd-42.ru/ffatkullin/json-helpers.git", rev = "v2.0.0" }


[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
